[project]
name = "forget-me-not"
version = "0.1.0"
description = "A groceries list app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.4",
    "debugpy>=1.8.14",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "loguru>=0.7.3",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]
